--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,20 @@ version: 2.0.1
 repository: https://github.com/insinfo/flutter_advanced_networkimage
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.24.0-6.0.pre"
+  sdk: '>=2.18.6 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.13.4 #Null safety
-  path_provider: ^2.0.5 #Null safety
-  path: ^1.8.0 #Null safety
-  flutter_svg: ^1.0.0 #Null safety
+  http: ^1.0.0
+  path_provider: ^2.0.5
+  path: ^1.8.0
+  flutter_svg: ^1.1.6
   pool: ^1.5.0
   async: ^2.8.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: "^1.9.0"
+  test: ^1.9.0
